namespace abstract_facotry
{
    public interface ILongSword: ISword
    {
        public bool TwoHanded { get; }
    
    }
}