namespace abstract_facotry
{
    public interface IShortSword: ISword
    {
        public bool Throwable { get; }
    }
}