namespace abstract_facotry
{
    public enum SmithType
    {
        Lathar,
        Cynrad
    }
}